--- a/lesson-10-layouts/style1.css
+++ b/lesson-10-layouts/style1.css
@@ -14,9 +14,10 @@ body {
 
 .title > p {
   margin: 0;
-  padding: 23px 22px;
+  padding: 20px 20px 24px 29px;
   font-weight: bold;
   font-size: 23px;
+  letter-spacing: 0.06em;
   text-align: center;
   text-transform: uppercase;
   background-color: #EE8129;
@@ -25,20 +26,22 @@ body {
 
 .content p:first-child {
   margin: 0;
-  padding: 15px;
+  padding: 17px 10px 13px 20px;
   font-size: 23px;
+  letter-spacing: 0.02em;
   text-transform: uppercase;
 }
 
 .content p + p {
   margin: 0;
-  padding: 6px 5px 5px 6px;
+  padding: 0 5px 10px 6px;
   font-weight: bold;
   font-size: 20px;
   color: #35495A;
 }
 
 sup {
+  margin-right: 10px;
   font-size: 20px;
   vertical-align: top;
 }
@@ -49,9 +52,10 @@ span {
 /* изначально ul был одного цвета, а четные строки - li, другого,
 но затем переделал, дальше напишу - зачем */
 ul {
-  margin: 10px 13px;
+  margin: 11px 13px;
   padding: 0;
   text-align: left;
+  letter-spacing: 0.02em;
   list-style-image: url("arrow.png");
   list-style-position: inside;
   color: #8E9299;
@@ -73,7 +77,7 @@ ul li:nth-child(even) {
 }
 
 button {
-  margin: 0 0 17px 0;
+  margin: 1px 0 17px 0;
   padding: 11px 72px;
   font-weight: bold;
   font-size: 14px;
