corrected image paths in all files

--- a/lesson-12-backgrounds/packages/packages.css
+++ b/lesson-12-backgrounds/packages/packages.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Montserrat', sans-serif;
-  background: no-repeat url("../plans-background.jpg");
+  background: no-repeat url("../images/plans-background.jpg");
 }
 
 h6 {
